fix env and url

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL=http://localhost:5219/api
+VITE_BACKEND_URL=https://webapijrdemo-ded6g0gmc9aqh0h6.australiasoutheast-01.azurewebsites.net/api
