--- a/.github/workflows/main_frontend.yml
+++ b/.github/workflows/main_frontend.yml
@@ -32,5 +32,5 @@ jobs:
           --account-name jrdemohelloworld \
           --account-key ${{ secrets.AZURE_STORAGE_KEY }} \
           --destination \$web \
-          --source dist .\frontend\dist 
+          --source .\frontend\dist 
           --overwrite
