--- a/.github/workflows/main_frontend.yml
+++ b/.github/workflows/main_frontend.yml
@@ -1,6 +1,7 @@
 name: Deploy Vite Frontend to Azure Static Website
 
 on:
+  workflow_dispatch: 
   push:
     branches:
       - main
@@ -16,7 +17,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Install dependencies
       run: npm ci
@@ -31,6 +32,6 @@ jobs:
         az storage blob upload-batch \
           --account-name jrdemohelloworld \
           --account-key ${{ secrets.AZURE_STORAGE_KEY }} \
-          --destination \$web \
-          --source .\frontend\dist 
+          --destination '$web' \
+          --source ./frontend/dist  \
           --overwrite
